# mjx_system_identification_marchxi

./: .gitignore  README.md  pyproject.toml
examples/minipi_sys_id/: convert_rosbag_to_csv.py  dataset_generation.ipynb  optimization.ipynb  optimization_exo.ipynb  result_simulation.ipynb  run_experiment.py  test.ipynb
examples/minipi_sys_id/assets/exo/: knee_try_optimization.ipynb
examples/minipi_sys_id/assets/exo/model/: exo_hydrax.xml  exo_no_mesh.xml  exo_simple.xml
examples/minipi_sys_id/assets/single_motor/dataset/raw/rl2pd/: pi2_kp20_kd1_act1_valid.csv
examples/minipi_sys_id/assets/single_motor/model/: single_motor.xml
exo optimisation/: convert_rosbag_to_csv.py  exo.xml  exo_no_mesh.xml  joblib_retrieving.py  optimization.ipynb  optimization_arm_damp.ipynb  optimization_linear.ipynb  optimization_linear_log.ipynb  validation.py
exo optimisation/exo_experiments/exo_optimization_try_20251212_1224/checkpoints/: optimized_parameters.txt
exo optimisation/exo_experiments/exo_optimization_try_20251217_1700/checkpoints/: optimized_parameters.txt
exo optimisation/models/: rotational_position.xml
exo optimisation/validation/: plot_jeen.py  validation2.py
sysidmjx/: core.py
sysidmjx/assets/single_motor/dataloader/: single_joint.py
sysidmjx/assets/single_motor/model/: single_motor_best.xml
sysidmjx/assets/single_motor/model/motor_stl/: motor.stl
